--- a/viral_spectra/get_viruses_nuc_and_aa_equilibrium_freq.ipynb
+++ b/viral_spectra/get_viruses_nuc_and_aa_equilibrium_freq.ipynb
@@ -1528,22 +1528,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "e612f200-51a0-4639-b19a-354b8ed71e11",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_aa_eq_freq_all.to_csv('aminoacid_eq_freq_all_virus.csv')"
+    "df_aa_eq_freq_all.to_csv('aminoacid_eq_freq_all_virus.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "f8187306-0c78-4ffa-b3be-f38b1d9bdd1c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_nucl_eq_all.to_csv('nucl_eq_freq_all_virus.csv')"
+    "df_nucl_eq_all.to_csv('nucl_eq_freq_all_virus.csv', index=False)"
    ]
   },
   {
@@ -1832,12 +1832,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "id": "5c1a046f-3a39-4dc1-9d79-10d3dda7805a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_aa_eq_freq_sarscov2.to_csv('aminoacid_eq_freq_sars_cov2.csv')"
+    "df_aa_eq_freq_sarscov2.to_csv('aminoacid_eq_freq_sars_cov2.csv', index=False)"
    ]
   },
   {
