--- a/viral_spectra/get_viral_spectra_dataset.ipynb
+++ b/viral_spectra/get_viral_spectra_dataset.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "7e6ab7f2-bbaf-42d6-95c1-c5d61536381a",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "ad50b3c2-3466-4a39-acf0-d9513686c655",
    "metadata": {},
    "outputs": [
@@ -551,7 +551,7 @@
        "36                NaN    +                                Deformed wing virus  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "092aa283-fbd5-49c5-bd6f-8dc6da6aa6c2",
    "metadata": {},
    "outputs": [],
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "d64602bf-5669-4b77-ada5-2a7ba57286c9",
    "metadata": {},
    "outputs": [
@@ -764,7 +764,7 @@
        "[348 rows x 8 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "a83096ed-ca4b-4fd7-991f-0de026383ba0",
    "metadata": {},
    "outputs": [],
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "3570bbed-cd53-49b7-9982-e2879f9b873f",
    "metadata": {},
    "outputs": [],
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 8,
    "id": "1d9cf77a-6d84-4e40-8b7a-a5d53701ed68",
    "metadata": {},
    "outputs": [],
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 9,
    "id": "037a7878-8197-425b-a341-158d780a1aa1",
    "metadata": {},
    "outputs": [
@@ -1501,7 +1501,7 @@
        "28                             Rice stripe tenuivirus  nemu  3052763  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "55a57d3d-23ff-47ee-ba50-4cc07c2d39da",
    "metadata": {},
    "outputs": [],
@@ -1530,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "id": "97fb010e-1614-4383-bbb8-72f458271336",
    "metadata": {},
    "outputs": [],
@@ -1540,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "id": "93a66ef3-beb1-42e5-9d7f-1b1fe7f07fc8",
    "metadata": {},
    "outputs": [
@@ -1772,7 +1772,7 @@
        "12  {'A': 0.28972834525455404, 'C': 0.209877620178...  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1783,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 13,
    "id": "6c12cbd4-efd5-4b96-a329-9227e2dbe6e3",
    "metadata": {},
    "outputs": [
@@ -2054,7 +2054,7 @@
        "12  0.027161  0.010195  0.026178  0.003357  0.005098  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2068,7 +2068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 14,
    "id": "8b9cf3a1-c102-4d46-9860-2f7e472ff153",
    "metadata": {},
    "outputs": [],
@@ -2081,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 15,
    "id": "b519ce59-2f8a-402d-9da2-37c3f46f300b",
    "metadata": {},
    "outputs": [],
@@ -2094,7 +2094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 16,
    "id": "769a1e2c-6b8c-4795-98c6-24a2d0b2d660",
    "metadata": {},
    "outputs": [
@@ -2436,7 +2436,7 @@
        "12    +  Bloom_etal          WNV  "
       ]
      },
-     "execution_count": 122,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2451,7 +2451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 17,
    "id": "1eb9e923-8cac-456a-862f-0e7f4d570feb",
    "metadata": {},
    "outputs": [],
@@ -2461,7 +2461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 18,
    "id": "811e325e-887b-4e9d-86af-7aba4a5d518b",
    "metadata": {},
    "outputs": [],
@@ -2479,7 +2479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 19,
    "id": "ca74c692-e281-4d46-beda-ac89110cd505",
    "metadata": {},
    "outputs": [],
@@ -2489,7 +2489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 20,
    "id": "150fd85d-7995-4e9a-9dec-0a3e8c3f1ff7",
    "metadata": {},
    "outputs": [
@@ -2681,7 +2681,7 @@
        "[168 rows x 8 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2692,7 +2692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 21,
    "id": "4265f6a0-7bec-409f-83ed-0fd1552b4b8c",
    "metadata": {},
    "outputs": [],
@@ -2702,7 +2702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 22,
    "id": "21e65332-446a-4cb5-bde5-0fe8358af764",
    "metadata": {},
    "outputs": [],
@@ -2712,7 +2712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 23,
    "id": "42374400-e1d0-412d-aeac-6ad007ee3295",
    "metadata": {},
    "outputs": [],
@@ -2724,7 +2724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 24,
    "id": "29dca54a-df22-4965-84bc-9add4c6a0bec",
    "metadata": {},
    "outputs": [
@@ -3073,7 +3073,7 @@
        "13        SARS-CoV-2 22C    +  Bloom_etal  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3088,7 +3088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 25,
    "id": "69b96a27-8f8b-436c-8b9e-0ccd91889baa",
    "metadata": {},
    "outputs": [],
@@ -3099,9 +3099,115 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d22993b5-493f-4631-89c8-a4a7c4f57e71",
+   "id": "b8a8b951-9b00-455c-bc04-643b4cbb85b0",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d22993b5-493f-4631-89c8-a4a7c4f57e71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>mut_type</th>\n",
+       "      <th>A&gt;C</th>\n",
+       "      <th>A&gt;G</th>\n",
+       "      <th>A&gt;T</th>\n",
+       "      <th>C&gt;A</th>\n",
+       "      <th>C&gt;G</th>\n",
+       "      <th>C&gt;T</th>\n",
+       "      <th>G&gt;A</th>\n",
+       "      <th>G&gt;C</th>\n",
+       "      <th>G&gt;T</th>\n",
+       "      <th>T&gt;A</th>\n",
+       "      <th>T&gt;C</th>\n",
+       "      <th>T&gt;G</th>\n",
+       "      <th>taxname</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>df</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.007791</td>\n",
+       "      <td>0.044050</td>\n",
+       "      <td>0.014029</td>\n",
+       "      <td>0.019518</td>\n",
+       "      <td>0.007484</td>\n",
+       "      <td>0.409514</td>\n",
+       "      <td>0.101614</td>\n",
+       "      <td>0.016632</td>\n",
+       "      <td>0.324148</td>\n",
+       "      <td>0.008769</td>\n",
+       "      <td>0.040320</td>\n",
+       "      <td>0.006130</td>\n",
+       "      <td>SARS-CoV-2 20A</td>\n",
+       "      <td>+</td>\n",
+       "      <td>Bloom_etal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.005280</td>\n",
+       "      <td>0.061198</td>\n",
+       "      <td>0.014484</td>\n",
+       "      <td>0.029170</td>\n",
+       "      <td>0.003536</td>\n",
+       "      <td>0.474034</td>\n",
+       "      <td>0.127443</td>\n",
+       "      <td>0.013234</td>\n",
+       "      <td>0.198024</td>\n",
+       "      <td>0.011246</td>\n",
+       "      <td>0.055648</td>\n",
+       "      <td>0.006704</td>\n",
+       "      <td>SARS-CoV-2 22C</td>\n",
+       "      <td>+</td>\n",
+       "      <td>Bloom_etal</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "mut_type       A>C       A>G       A>T       C>A       C>G       C>T  \\\n",
+       "0         0.007791  0.044050  0.014029  0.019518  0.007484  0.409514   \n",
+       "1         0.005280  0.061198  0.014484  0.029170  0.003536  0.474034   \n",
+       "\n",
+       "mut_type       G>A       G>C       G>T       T>A       T>C       T>G  \\\n",
+       "0         0.101614  0.016632  0.324148  0.008769  0.040320  0.006130   \n",
+       "1         0.127443  0.013234  0.198024  0.011246  0.055648  0.006704   \n",
+       "\n",
+       "mut_type         taxname Type          df  \n",
+       "0         SARS-CoV-2 20A    +  Bloom_etal  \n",
+       "1         SARS-CoV-2 22C    +  Bloom_etal  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dfms12\n",
     "dfms12Bloom_etal\n",
@@ -3110,7 +3216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 27,
    "id": "1554fec4-5ffe-42f9-94cb-83c4c58f53b9",
    "metadata": {},
    "outputs": [],
@@ -3122,7 +3228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 28,
    "id": "681d631e-98c4-4308-8916-8926e6618b56",
    "metadata": {},
    "outputs": [
@@ -3997,7 +4103,7 @@
        "33            -  "
       ]
      },
-     "execution_count": 144,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4008,7 +4114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 29,
    "id": "0de75b45-ba1e-4133-836d-0ae847ba5a36",
    "metadata": {},
    "outputs": [],
