script for neutral_model_apply and utils.py

--- a/sars-cov-2_aa_subst/process.ipynb
+++ b/sars-cov-2_aa_subst/process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,10 +24,11 @@
     "from sklearn.metrics import mean_squared_error\n",
     "import tqdm\n",
     "\n",
-    "from calculate_exp_aa_subst_matrix import (\n",
+    "from utils import (\n",
     "    amino_acid_codes, alphabet, cdn_spectrum_to_matrix, \n",
     "    nuc_spectrum_to_matrix, collect_possible_changes,\n",
-    "    get_equilibrium_probabilities\n",
+    "    get_equilibrium_probabilities, plot_exp_heatmap,\n",
+    "    prepare_aa_subst, plot_aa_eq_freqs,\n",
     ")"
    ]
   },
@@ -2862,7 +2863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3097,26 +3098,27 @@
    "source": [
     "obs_clade = obs[obs['clade'] == '20A']\n",
     "\n",
-    "aa_subst = obs_clade.groupby(['aa1', 'aa2'])['count'].sum().rename('nobs').reset_index()\n",
-    "aa_subst = aa_subst[(aa_subst.aa1 != aa_subst.aa2) & (aa_subst.aa1 != '*') & (aa_subst.aa2 != '*')]\n",
-    "aa_subst['aa1'] = aa_subst['aa1'].map(amino_acid_codes)\n",
-    "aa_subst['aa2'] = aa_subst['aa2'].map(amino_acid_codes)\n",
-    "aa_subst['ref_aa1_freq'] = aa_subst['aa1'].map(aa_freqs_total_dct) / sum(aa_freqs_total_dct.values())\n",
-    "aa_subst['nobs_scaled'] = aa_subst['nobs'] / aa_subst['ref_aa1_freq']\n",
-    "aa_subst['nobs_scaled'] = aa_subst['nobs_scaled'] / aa_subst['nobs_scaled'].sum() * aa_subst['nobs'].sum()\n",
-    "aa_subst = aa_subst.merge(exp_aa_subst.rename(columns={'rate': 'rate_exp'}), 'right').fillna(0)\n",
-    "aa_subst = aa_subst[aa_subst['aa1'] != aa_subst['aa2']]\n",
-    "aa_subst['nexp'] = aa_subst.rate_exp / aa_subst.rate_exp.sum() * aa_subst.nobs_scaled.sum()\n",
-    "aa_subst['diff'] = aa_subst.nobs_scaled - aa_subst.nexp\n",
-    "aa_subst['nobs_freqs'] = aa_subst.nobs_scaled / aa_subst.nobs_scaled.sum()\n",
-    "aa_subst['nexp_freqs'] = aa_subst.nexp / aa_subst.nexp.sum()\n",
-    "aa_subst['clade'] = '20A'\n",
+    "# aa_subst = obs_clade.groupby(['aa1', 'aa2'])['count'].sum().rename('nobs').reset_index()\n",
+    "# aa_subst = aa_subst[(aa_subst.aa1 != aa_subst.aa2) & (aa_subst.aa1 != '*') & (aa_subst.aa2 != '*')]\n",
+    "# aa_subst['aa1'] = aa_subst['aa1'].map(amino_acid_codes)\n",
+    "# aa_subst['aa2'] = aa_subst['aa2'].map(amino_acid_codes)\n",
+    "# aa_subst['ref_aa1_freq'] = aa_subst['aa1'].map(aa_freqs_total_dct) / sum(aa_freqs_total_dct.values())\n",
+    "# aa_subst['nobs_scaled'] = aa_subst['nobs'] / aa_subst['ref_aa1_freq']\n",
+    "# aa_subst['nobs_scaled'] = aa_subst['nobs_scaled'] / aa_subst['nobs_scaled'].sum() * aa_subst['nobs'].sum()\n",
+    "# aa_subst = aa_subst.merge(exp_aa_subst.rename(columns={'rate': 'rate_exp'}), 'right').fillna(0)\n",
+    "# aa_subst = aa_subst[aa_subst['aa1'] != aa_subst['aa2']]\n",
+    "# aa_subst['nexp'] = aa_subst.rate_exp / aa_subst.rate_exp.sum() * aa_subst.nobs_scaled.sum()\n",
+    "# aa_subst['diff'] = aa_subst.nobs_scaled - aa_subst.nexp\n",
+    "# aa_subst['nobs_freqs'] = aa_subst.nobs_scaled / aa_subst.nobs_scaled.sum()\n",
+    "# aa_subst['nexp_freqs'] = aa_subst.nexp / aa_subst.nexp.sum()\n",
+    "# aa_subst['clade'] = '20A'\n",
+    "aa_subst = prepare_aa_subst(obs_clade, exp_aa_subst, aa_freqs_total_dct)\n",
     "aa_subst"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3131,60 +3133,62 @@
     }
    ],
    "source": [
-    "freqs_from = (exp_aa_subst_matrix.sum(1) - exp_aa_subst_matrix.values.diagonal()).copy()\n",
-    "freqs_to = (exp_aa_subst_matrix.sum(0) - exp_aa_subst_matrix.values.diagonal()).copy()\n",
-    "max_flow_value = max(freqs_to.max(), freqs_from.max())+0.1\n",
+    "# freqs_from = (exp_aa_subst_matrix.sum(1) - exp_aa_subst_matrix.values.diagonal()).copy()\n",
+    "# freqs_to = (exp_aa_subst_matrix.sum(0) - exp_aa_subst_matrix.values.diagonal()).copy()\n",
+    "# max_flow_value = max(freqs_to.max(), freqs_from.max())+0.1\n",
     "\n",
-    "fig, axs = plt.subplots(2, 3, figsize=(11, 10), \n",
-    "                        width_ratios=[0.1, 1, .05], height_ratios=[1, 0.1])\n",
-    "sns.heatmap(exp_aa_subst_matrix, annot=False, fmt=\".2f\", \n",
-    "            ax=axs[0, 1], cbar_ax=axs[0, 2], cmap='coolwarm', \n",
-    "            cbar_kws={'label': 'Substitution rate'}, \n",
-    "            mask=exp_aa_subst_matrix==0,\n",
-    ")\n",
-    "axs[0, 1].set_ylabel('')\n",
-    "axs[0, 1].set_xlabel('')\n",
-    "axs[0, 1].set_xticks([])\n",
-    "axs[0, 1].set_yticks([])\n",
-    "# axs[0, 1].set_title('Expected substitution rates between amino acids')\n",
+    "# fig, axs = plt.subplots(2, 3, figsize=(11, 10), \n",
+    "#                         width_ratios=[0.1, 1, .05], height_ratios=[1, 0.1])\n",
+    "# sns.heatmap(exp_aa_subst_matrix, annot=False, fmt=\".2f\", \n",
+    "#             ax=axs[0, 1], cbar_ax=axs[0, 2], cmap='coolwarm', \n",
+    "#             cbar_kws={'label': 'Substitution rate'}, \n",
+    "#             mask=exp_aa_subst_matrix==0,\n",
+    "# )\n",
+    "# axs[0, 1].set_ylabel('')\n",
+    "# axs[0, 1].set_xlabel('')\n",
+    "# axs[0, 1].set_xticks([])\n",
+    "# axs[0, 1].set_yticks([])\n",
+    "# # axs[0, 1].set_title('Expected substitution rates between amino acids')\n",
     "\n",
-    "sns.barplot(freqs_from.reset_index(), y='aa1', x=0, ax=axs[0, 0],\n",
-    "            color='lightgray', edgecolor='black')\n",
-    "axs[0, 0].set_ylabel('From', fontsize=14)\n",
-    "axs[0, 0].set_xlabel('')\n",
-    "axs[0, 0].spines['top'].set_visible(False)\n",
-    "axs[0, 0].spines['right'].set_visible(False)\n",
-    "axs[0, 0].spines['bottom'].set_visible(False)\n",
-    "axs[0, 0].spines['left'].set_visible(False)\n",
-    "axs[0, 0].invert_xaxis()\n",
-    "axs[1, 1].set_ylim(0, max_flow_value)\n",
-    "axs[0, 0].set_xticks([])\n",
-    "axs[0, 0].set_yticklabels(axs[0, 0].get_yticklabels(), fontsize=12)\n",
+    "# sns.barplot(freqs_from.reset_index(), y='aa1', x=0, ax=axs[0, 0],\n",
+    "#             color='lightgray', edgecolor='black')\n",
+    "# axs[0, 0].set_ylabel('From', fontsize=14)\n",
+    "# axs[0, 0].set_xlabel('')\n",
+    "# axs[0, 0].spines['top'].set_visible(False)\n",
+    "# axs[0, 0].spines['right'].set_visible(False)\n",
+    "# axs[0, 0].spines['bottom'].set_visible(False)\n",
+    "# axs[0, 0].spines['left'].set_visible(False)\n",
+    "# axs[0, 0].invert_xaxis()\n",
+    "# axs[1, 1].set_ylim(0, max_flow_value)\n",
+    "# axs[0, 0].set_xticks([])\n",
+    "# axs[0, 0].set_yticklabels(axs[0, 0].get_yticklabels(), fontsize=12)\n",
     "\n",
-    "sns.barplot(freqs_to.reset_index(), x='aa2', y=0, ax=axs[1, 1],\n",
-    "            color='lightgray', edgecolor='black')\n",
-    "axs[1, 1].set_ylabel('')\n",
-    "axs[1, 1].set_xlabel('To', fontsize=14)\n",
-    "axs[1, 1].spines['top'].set_visible(False)\n",
-    "axs[1, 1].spines['right'].set_visible(False)\n",
-    "axs[1, 1].spines['bottom'].set_visible(False)\n",
-    "axs[1, 1].spines['left'].set_visible(False)\n",
-    "axs[1, 1].invert_yaxis()\n",
-    "axs[1, 1].set_ylim(max_flow_value, 0)\n",
-    "axs[1, 1].set_yticks([])\n",
-    "axs[1, 1].set_xticklabels(axs[1, 1].get_xticklabels(), fontsize=12)\n",
+    "# sns.barplot(freqs_to.reset_index(), x='aa2', y=0, ax=axs[1, 1],\n",
+    "#             color='lightgray', edgecolor='black')\n",
+    "# axs[1, 1].set_ylabel('')\n",
+    "# axs[1, 1].set_xlabel('To', fontsize=14)\n",
+    "# axs[1, 1].spines['top'].set_visible(False)\n",
+    "# axs[1, 1].spines['right'].set_visible(False)\n",
+    "# axs[1, 1].spines['bottom'].set_visible(False)\n",
+    "# axs[1, 1].spines['left'].set_visible(False)\n",
+    "# axs[1, 1].invert_yaxis()\n",
+    "# axs[1, 1].set_ylim(max_flow_value, 0)\n",
+    "# axs[1, 1].set_yticks([])\n",
+    "# axs[1, 1].set_xticklabels(axs[1, 1].get_xticklabels(), fontsize=12)\n",
     "\n",
-    "axs[1, 0].remove()\n",
-    "axs[1, 2].remove()\n",
+    "# axs[1, 0].remove()\n",
+    "# axs[1, 2].remove()\n",
     "\n",
-    "plt.tight_layout()\n",
-    "plt.savefig('figures/exp_exp_aa_subst_matrix_20A.pdf')\n",
-    "plt.show()"
+    "# plt.tight_layout()\n",
+    "# plt.savefig()\n",
+    "# plt.show()\n",
+    "\n",
+    "plot_exp_heatmap(exp_aa_subst_matrix, 'figures/exp_exp_aa_subst_matrix_20A.pdf', show=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3199,44 +3203,46 @@
     }
    ],
    "source": [
-    "_freqs_to = (freqs_to / freqs_to.sum()).copy()\n",
-    "_freqs_from = (freqs_from / freqs_from.sum()).copy()\n",
-    "_freqs_to.index.name = 'aa'\n",
-    "_freqs_from.index.name = 'aa'\n",
+    "# _freqs_to = (freqs_to / freqs_to.sum()).copy()\n",
+    "# _freqs_from = (freqs_from / freqs_from.sum()).copy()\n",
+    "# _freqs_to.index.name = 'aa'\n",
+    "# _freqs_from.index.name = 'aa'\n",
     "\n",
-    "plt.figure(figsize=(12, 3))\n",
-    "ax = sns.barplot((_freqs_to - _freqs_from).sort_values(ascending=False).reset_index(), \n",
-    "            x='aa', y=0, color='lightgray', edgecolor=\".65\")\n",
+    "# plt.figure(figsize=(12, 3))\n",
+    "# ax = sns.barplot((_freqs_to - _freqs_from).sort_values(ascending=False).reset_index(), \n",
+    "#             x='aa', y=0, color='lightgray', edgecolor=\".65\")\n",
     "\n",
-    "for bar in ax.patches:\n",
-    "    if bar.get_height() > 0.05:\n",
-    "        bar.set_color('orangered')\n",
-    "        bar.set_edgecolor('0.02')\n",
-    "    elif bar.get_height() > 0.02:\n",
-    "        bar.set_color('lightcoral')\n",
-    "        bar.set_edgecolor('0.05')\n",
-    "    elif bar.get_height() < -0.05:\n",
-    "        bar.set_color('royalblue')\n",
-    "        bar.set_edgecolor('0.02')\n",
-    "    elif bar.get_height() < -0.02:\n",
-    "        bar.set_color('lightblue')\n",
-    "        bar.set_edgecolor('0.45')\n",
+    "# for bar in ax.patches:\n",
+    "#     if bar.get_height() > 0.05:\n",
+    "#         bar.set_color('orangered')\n",
+    "#         bar.set_edgecolor('0.02')\n",
+    "#     elif bar.get_height() > 0.02:\n",
+    "#         bar.set_color('lightcoral')\n",
+    "#         bar.set_edgecolor('0.05')\n",
+    "#     elif bar.get_height() < -0.05:\n",
+    "#         bar.set_color('royalblue')\n",
+    "#         bar.set_edgecolor('0.02')\n",
+    "#     elif bar.get_height() < -0.02:\n",
+    "#         bar.set_color('lightblue')\n",
+    "#         bar.set_edgecolor('0.45')\n",
     "\n",
-    "plt.legend([\n",
-    "    plt.Rectangle((0,0),1,1,fc=\"orangered\", edgecolor = '0.45'), \n",
-    "    plt.Rectangle((0,0),1,1,fc=\"lightcoral\", edgecolor = '0.45'), \n",
-    "    plt.Rectangle((0,0),1,1,fc='lightblue', edgecolor = '0.45'),\n",
-    "    plt.Rectangle((0,0),1,1,fc='royalblue', edgecolor = '0.45'),\n",
-    "    ],[\n",
-    "        'Top Gainers', 'Gainers', 'Loosers', 'Top Loosers'], \n",
-    "    loc='upper right')\n",
+    "# plt.legend([\n",
+    "#     plt.Rectangle((0,0),1,1,fc=\"orangered\", edgecolor = '0.45'), \n",
+    "#     plt.Rectangle((0,0),1,1,fc=\"lightcoral\", edgecolor = '0.45'), \n",
+    "#     plt.Rectangle((0,0),1,1,fc='lightblue', edgecolor = '0.45'),\n",
+    "#     plt.Rectangle((0,0),1,1,fc='royalblue', edgecolor = '0.45'),\n",
+    "#     ],[\n",
+    "#         'Top Gainers', 'Gainers', 'Loosers', 'Top Loosers'], \n",
+    "#     loc='upper right')\n",
     "\n",
-    "# plt.title(f'Expected aa subst based assignment')\n",
-    "plt.ylabel('Rates [To - From]', fontsize=13)\n",
-    "plt.xlabel('')\n",
-    "plt.xticks(fontsize=12)\n",
-    "plt.savefig('./figures/aa_diff_rates_vert_cytb.pdf')\n",
-    "plt.show()"
+    "# # plt.title(f'Expected aa subst based assignment')\n",
+    "# plt.ylabel('Rates [To - From]', fontsize=13)\n",
+    "# plt.xlabel('')\n",
+    "# plt.xticks(fontsize=12)\n",
+    "# plt.savefig('./figures/aa_diff_rates_vert_cytb.pdf')\n",
+    "# plt.show()\n",
+    "\n",
+    "plot_aa_eq_freqs(exp_aa_subst_matrix, 'figures/exp_aa_eq_freqs_20A.pdf', show=True)"
    ]
   },
   {
@@ -4100,27 +4106,6 @@
     "g.legend.set_title('Site sampling\\ncutoff, %')\n",
     "g.savefig('./figures/clades_fit_metrics_boxplots.pdf')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'log_likelihood': <Axes: title={'center': 'log_likelihood'}, ylabel='Metric value'>,\n",
-       " 'mut_count': <Axes: title={'center': 'mut_count'}>,\n",
-       " 'spearman_corr': <Axes: title={'center': 'spearman_corr'}, xlabel='Sites', ylabel='Metric value'>,\n",
-       " 'accuracy': <Axes: title={'center': 'accuracy'}, xlabel='Sites'>}"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
